--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uz">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Koinot Arbitasi</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+<div class="space">
+    <h1>Koinot Arbitasi</h1>
+    <p>Bu koinot arbitasi sahifasi</p>
+</div>
+<div class="stars"></div>
 </body>
 </html>
